userAuth with bugs

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "google-auth-library": "^8.1.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.4.4",
     "nodemon": "^2.0.19"
